<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_1"
    android:padding="10dp"
    tools:context=".fragment.InfoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtConclusion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_conclusion"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- sample xml -->
            <com.ms.square.android.expandabletextview.ExpandableTextView xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
                android:id="@+id/expand_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtConclusion"
                expandableTextView:animDuration="200"
                expandableTextView:maxCollapsedLines="4">

                <TextView
                    android:id="@id/expandable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:textColor="@color/teal_200" />

                <ImageButton
                    android:id="@id/expand_collapse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/transparent"
                    android:padding="8dp"
                    android:tint="@color/yellow" />
            </com.ms.square.android.expandabletextview.ExpandableTextView>

            <TextView
                android:id="@+id/txtReadWrite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/expand_text_view"
                android:text="@string/writer_and_reader"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtWrite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtReadWrite"
                android:text="@string/writer"
                android:textColor="@color/teal_200" />

            <TextView
                android:id="@+id/txtRead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtWrite"
                android:text="@string/reader"
                android:textColor="@color/teal_200" />

            <TextView
                android:id="@+id/txtInfoBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtRead"
                android:layout_marginTop="16dp"
                android:text="@string/txt_info_book"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtInfoBook"
                android:text="@string/txt_language"
                android:textColor="@color/teal_200" />

            <TextView
                android:id="@+id/txtLanguageAudio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtLanguage"
                android:text="@string/txt_language_audio"
                android:textColor="@color/teal_200" />

            <TextView
                android:id="@+id/txtTimeAudio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtLanguageAudio"
                android:text="@string/txt_time_audio"
                android:textColor="@color/teal_200" />


        </RelativeLayout>
    </ScrollView>

</FrameLayout>