<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_1"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:id="@+id/idFragmentView"
    tools:context=".fragment.MoreFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Action Bar comment-->
            <RelativeLayout
                android:id="@+id/actionComment"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/txt_comments"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/btnWriteComment"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bg_tab_layout"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/write_comment"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </RelativeLayout>
            <!--RecyclerView comment-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvComment"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/actionComment" />

            <LinearLayout
                android:id="@+id/llAuthor"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/rvComment"
                android:layout_marginTop="16dp"
                android:background="@color/yellow" />

            <!--RecyclerView Author-->
            <RelativeLayout
                android:id="@+id/rlAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/llAuthor"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?actionBarItemBackground">

                <TextView
                    android:id="@+id/txtAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imgAuthor"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_below="@id/txtAuthor"
                    android:src="@drawable/ic_author"/>

                <TextView
                    android:id="@+id/txtNameAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/imgAuthor"
                    android:layout_alignBottom="@id/imgAuthor"
                    android:layout_marginStart="8dp"
                    android:layout_toRightOf="@id/imgAuthor"
                    android:gravity="center_vertical"
                    android:text="@string/author_name"
                    android:textColor="@color/white" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/imgAuthor"
                    android:layout_alignBottom="@id/imgAuthor"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_next" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/llBookAuthor"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/rlAuthor"
                android:layout_marginTop="16dp"
                android:background="@color/yellow" />

            <!--RecyclerView other book author-->
            <RelativeLayout
                android:id="@+id/rlBookAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/llBookAuthor"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/txtBookAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other_book_author"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvOtherBookAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_below="@id/txtBookAuthor" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</FrameLayout>